# Kidney_disease_classifier_CNN

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.py  template.py
research/: trials.ipynb
src/CNN_classifier/: __init__.py
src/CNN_classifier/utils/: common.py
