[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CNN_classifier"
version = "0.0.0"
description = "A small python package for CNN app"
authors = [{ name = "Rahul-Tawar", email = "rahultawar2004@gmail.com" }]
readme = "README.md"
requires-python = ">=3.7"
keywords = ["CNN", "kidney disease", "classifier", "deep learning"]
dependencies = []

[project.urls]
Homepage = "https://github.com/Rahul-Tawar/Kidney_disease_classifier_CNN"
Bug_Tracker = "https://github.com/Rahul-Tawar/Kidney_disease_classifier_CNN/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]